Fixed profile views image not showing when taking the entire screen

--- a/Styles/main.css
+++ b/Styles/main.css
@@ -261,7 +261,6 @@ body.drag-over::before {
   height: auto;
 }
 #tab1 #profileViewsImg {
-  max-width: 100%;
   height: auto;
   border-radius: 8px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
@@ -408,7 +407,6 @@ body.drag-over::before {
       overflow-y: hidden;
   }
 }
-
 
 /*Centers materialize floating buttons*/
 .btn-floating
